--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            position: relative; /* Necessário para posicionar os botões */
         }
         .container {
             text-align: center;
@@ -42,7 +43,61 @@
         button:hover {
             background-color: #0056b3;
         }
+        .steam-button, .discord-button {
+            position: absolute;
+            right: 20px;
+            border: none;
+            border-radius: 10px;
+            padding: 10px;
+            display: flex;
+            align-items: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+            cursor: pointer;
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+        }
+        .steam-button {
+            bottom: 80px; /* Ajusta a posição acima do botão do Discord */
+            width: 120px; /* Largura ajustada */
+            background-color: #1b2838; /* Cor de fundo do Steam */
+        }
+        .discord-button {
+            bottom: 20px;
+            width: 120px; /* Largura ajustada */
+            background-color: #7289da; /* Cor de fundo do Discord */
+        }
+        .steam-button img, .discord-button img {
+            width: 40px;
+            height: 30px;
+            margin-right: 10px;
+        }
+        .steam-button span, .discord-button span {
+            font-size: 18px;
+			font-family: Arial
+        }
+        .note {
+            font-size: 12px;
+            color: #555;
+            margin-top: 10px;
+        }
     </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Conectar ao servidor da Nebula Network Retake #1</h1>
+        <p>Clique no botão abaixo para conectar ao servidor de CS:GO.</p>
+        <button onclick="connectToServer()">Conectar ao servidor</button>
+        <p class="note">(É necessário estar com CS:GO aberto para conectar-se)</p>
+    </div>
+    <a href="http://steamcommunity.com/groups/oficialnebulanetwork" target="_blank" class="steam-button">
+        <img src="https://raw.githubusercontent.com/nohxxx/Nebula-Retake/main/Steamlogo.png" alt="Steam Logo">
+        <span>Grupo</span>
+    </a>
+    <a href="https://discord.gg/XEkzEaaTj8" target="_blank" class="discord-button">
+        <img src="https://raw.githubusercontent.com/nohxxx/Nebula-Retake/main/Discordlogo.png" alt="Discord Logo">
+        <span>Discord</span>
+    </a>
     <script>
         function connectToServer() {
             window.location.href = "steam://connect/131.196.196.196:27330";
@@ -51,12 +106,5 @@
             }, 3500);
         }
     </script>
-</head>
-<body>
-    <div class="container">
-        <h1>Conectar ao servidor da Nebula Network Retake #1</h1>
-        <p>Clique no botão abaixo para conectar ao servidor de CS:GO.</p>
-        <button onclick="connectToServer()">Conectar ao servidor</button>
-    </div>
 </body>
 </html>
