--- a/index.html
+++ b/index.html
@@ -2,109 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conectar ao servidor Nebula Network # Retake</title>
+    <meta http-equiv="refresh" content="0;url=steam://connect/131.196.196.196:27330">
+    <title>Conectar ao servidor Nebula Network Retake#1</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-image: url('https://raw.githubusercontent.com/nohxxx/Nebula-Retake/main/730_20.jpg'); /* Altere para o caminho da sua imagem */
-            background-size: cover;
-            background-position: center;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            position: relative; /* Necessário para posicionar os botões */
+            background-image: url('https://raw.githubusercontent.com/nohxxx/Nebula-DirectConnect/main/img/730_20.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
         }
-        .container {
+        #container {
+            width: 700px;
+            height: 500px;
+            background-color: rgba(211, 211, 211, 0.9); 
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
-            background-color: rgba(211, 211, 211, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 20px;
+        }
+        h1, h2 {
+            margin: 0;
+            padding: 10px 0;
+            color: black;
+            font-family: Arial, sans-serif;
         }
         h1 {
-            color: #333;
+            font-size: 32px;
         }
-        p {
-            color: #555;
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .steam-button, .discord-button {
-            position: absolute;
-            right: 20px;
-            border: none;
-            border-radius: 10px;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            cursor: pointer;
-            color: white;
-            text-decoration: none;
-            font-size: 16px;
-        }
-        .steam-button {
-            bottom: 80px; /* Ajusta a posição acima do botão do Discord */
-            width: 120px; /* Largura ajustada */
-            background-color: #1b2838; /* Cor de fundo do Steam */
-        }
-        .discord-button {
-            bottom: 20px;
-            width: 120px; /* Largura ajustada */
-            background-color: #7289da; /* Cor de fundo do Discord */
-        }
-        .steam-button img, .discord-button img {
-            width: 35px;
-            height: 30px;
-            margin-right: 10px;
-        }
-        .steam-button span, .discord-button span {
-            font-size: 18px;
-			font-family: Arial
-        }
-        .note {
-            font-size: 12px;
-            color: #555;
-            margin-top: 10px;
+        h2 {
+            font-size: 24px;
         }
     </style>
+    <script>
+        setTimeout(function() {
+            window.close();
+        }, 3500);
+    </script>
 </head>
 <body>
-    <div class="container">
-        <h1>Conectar ao servidor da Nebula Network Retake #1</h1>
-        <p>Clique no botão abaixo para conectar ao servidor de CS:GO.</p>
-        <button onclick="connectToServer()">Conectar ao servidor</button>
-        <p class="note">(É necessário estar com CS:GO aberto para conectar-se)</p>
+    <div id="container">
+        <h1>[CS:GO] Nebula Retake#1</h1>
+        <h2>Redirecionando para o servidor de CS:GO...</h2>
     </div>
-    <a href="http://steamcommunity.com/groups/oficialnebulanetwork" target="_blank" class="steam-button">
-        <img src="https://raw.githubusercontent.com/nohxxx/Nebula-Retake/main/Steamlogo.png" alt="Steam Logo">
-        <span>Grupo</span>
-    </a>
-    <a href="https://discord.gg/XEkzEaaTj8" target="_blank" class="discord-button">
-        <img src="https://raw.githubusercontent.com/nohxxx/Nebula-Retake/main/Discordlogo.png" alt="Discord Logo">
-        <span>Discord</span>
-    </a>
-    <script>
-        function connectToServer() {
-            window.location.href = "steam://connect/131.196.196.196:27330";
-            setTimeout(function() {
-                window.close();
-            }, 3500);
-        }
-    </script>
 </body>
 </html>
