--- a/index.html
+++ b/index.html
@@ -2,55 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=steam://connect/131.196.196.196:27330">
-    <title>Conectar ao servidor Nebula Network Retake#1</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-image: url('https://raw.githubusercontent.com/nohxxx/Nebula-Retake/main/730_20.jpg');
-            background-size: cover;
-            background-position: center;
-            color: white;
-        }
-        #container {
-            width: 700px;
-            height: 500px;
-            background-color: rgba(211, 211, 211, 0.9); 
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            border-radius: 20px;
-        }
-        h1, h2 {
-            margin: 0;
-            padding: 10px 0;
-            color: black;
-            font-family: Arial, sans-serif;
-        }
-        h1 {
-            font-size: 32px;
-        }
-        h2 {
-            font-size: 24px;
-        }
-    </style>
-    <script>
-        setTimeout(function() {
-            window.close();
-        }, 3500);
-    </script>
+    <title>Redirecionando</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
+    <link rel="icon" href="img/letter-n-svgrepo-com.svg" sizes="64x64" type="image/.svg">
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <h1>[CS:GO] Nebula Retake#1</h1>
-        <h2>Redirecionando para o servidor de CS:GO...</h2>
+        <h2>Redirecionando para o servidor<span class="dots"></span></h2>
     </div>
 </body>
 </html>
